kubernetes/apps/tools/stirling-pdf/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
  namespace: tools
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: web
  selector:
    app: stirling-pdf
